# alwf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  alwf.cmake  setup.sh  webview-app
cmake/: manifest.cmake  utils.cmake
cmake/templates/: app.config.in  app.manifest.in  app.rc.in  lib.manifest.in  version.h.in
example/: CMakeLists.txt
example/public/: api.js  app.js  style.css
example/src/: handlers.cpp  handlers.hpp  main.cpp
example/src/locales/en/: app.po
example/views/: api.at  app.pug  index.at  start.at
example/views/layouts/: layout.at
include/alwf/: alwf.hpp
public/: app.js  framework.js  style.css
src/: alwf.cpp  alwf.js  init.hpp
src/app/: framework.cpp  framework.hpp  handlers.cpp  main.cpp
src/app/linux/: __os_linux_init.cpp
src/app/locales/: CMakeLists.txt
src/app/locales/ru/: app.po
src/app/win32/: __os_win32_init.cpp  init.cpp  init.hpp  platform.hpp
src/internal/: framework.cpp  framework.hpp
src/internal/linux/: __os_linux_init.cpp  platform.hpp
src/internal/win32/: __os_win32_init.cpp  init.hpp  platform.hpp
src/pug-compile/: index.js  package-lock.json  package.json
src/pug-compile/templates/: header.ejs  impl.ejs
views/: about.pug  app.pug
